--- a/exercise4.html
+++ b/exercise4.html
@@ -6,12 +6,12 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="chapter3.js"></script>
+  <script src="exercise4.js"></script>
   <!-- <link rel="stylesheet" href="index.css"> -->
 
 </head>
 <body>
-<h1> Chapter 3 </h1>
+<h1> Chapter 4 exercises </h1>
 
 </body>
 </html>
